# halflife-tools

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions.yml
src/: activity.h  activitymap.h  animation.c  bitmap.h  bspfile.h  common.c  decompile.c  decompile.h  info.c  math.c  model.c  pch.h  sprite.c  sprite.h  studio.c  studio.h  texture.c  wad.c  wadlib.h
test/: test.sh
